--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ url: captions.streamdata.gallery
 tag: Captions
 markdown: kramdown
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md", ".DS_Store"]
-github_user: streamdata-gallery-type
+github_user: streamdata-gallery-topics
 github_repo: captions
 github_branch: master
 collections:
